--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,23 @@
 <resources>
     <string name="app_name">这个是app的名称</string>
+    <string name="we_sub_name">这里是专门显示教学的页面</string>
     <string name="button1">确认</string>
     <string name="editText1">名字</string>
-    <string name="button2">跳转</string>
+    <string name="button2">跳转到tabbar</string>
+    <string name="button3">文本框</string>
+    <string name="button4">可编辑文本框</string>
+    <string name="button5">按钮使用</string>
+    <string name="button6">复选和单选框</string>
+    <string name="button7">开关按钮</string>
+    <string name="button8">图片视图</string>
+    <string name="button9">图片按钮</string>
+    <string name="button10">自定义view</string>
+    <string name="button11">线性布局</string>
+    <string name="button12">layout_gravity</string>
+    <string name="button13">padding和margin</string>
+    <string name="button14">相对布局</string>
     <string name="title_activity_tabbar">tabbar</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">标题左</string>
+    <string name="title_dashboard">标题中</string>
+    <string name="title_notifications">标题右</string>
 </resources>
