--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="button13">padding和margin</string>
     <string name="button14">相对布局</string>
     <string name="button15">表格布局</string>
-    <string name="button16">帧布局</string>\
+    <string name="button16">帧布局</string>
     <string name="button17">绝对布局</string>
     <string name="button18">网格布局</string>
     <string name="button19">Android事件</string>
