--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,12 @@
     <string name="button28">baseadapter</string>
     <string name="button29">listview优化</string>
     <string name="button30">listview数据更新</string>
+    <string name="button31">GridView简单使用</string>
+    <string name="button32">下拉框Spinner</string>
+    <string name="button33">自动完成文本框</string>
+    <string name="button34">可折叠列表ExpandableListView</string>
+    <string name="button35">AdapterViewFlipper图片轮播</string>
+    <string name="button36">StackView卡片堆叠</string>
     <string name="title_activity_tabbar">tabbar</string>
     <string name="title_home">标题左</string>
     <string name="title_dashboard">标题中</string>
