--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,11 @@
     <string name="button34">可折叠列表ExpandableListView</string>
     <string name="button35">AdapterViewFlipper图片轮播</string>
     <string name="button36">StackView卡片堆叠</string>
+    <string name="button37">进度条ProgressBar</string>
+    <string name="button38">自定义进度条</string>
+    <string name="button39">拖动条SeekBar和星级评分条RatingBar</string>
+    <string name="button40">视图切换组件ViewSwitcher</string>
+    <string name="button41">ImageSwitcher和TextSwitcher使用</string>
     <string name="title_activity_tabbar">tabbar</string>
     <string name="title_home">标题左</string>
     <string name="title_dashboard">标题中</string>
