修复BUG，并再练一课

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,9 @@
     <string name="button38">自定义进度条</string>
     <string name="button39">拖动条SeekBar和星级评分条RatingBar</string>
     <string name="button40">视图切换组件ViewSwitcher</string>
-    <string name="button41">ImageSwitcher和TextSwitcher使用</string>
+    <string name="button41">ImageSwitcher使用</string>
+    <string name="button42">TextSwitcher使用</string>
+    <string name="button43">viewflipper引导页和轮播图</string>
     <string name="title_activity_tabbar">tabbar</string>
     <string name="title_home">标题左</string>
     <string name="title_dashboard">标题中</string>
