--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="button41">ImageSwitcher使用</string>
     <string name="button42">TextSwitcher使用</string>
     <string name="button43">viewflipper引导页和轮播图</string>
+    <string name="button44">日期选择器</string>
+    <string name="button45">时间选择器</string>
     <string name="title_activity_tabbar">tabbar</string>
     <string name="title_home">标题左</string>
     <string name="title_dashboard">标题中</string>
