截止做到67课时备份

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,21 @@
     <string name="button44">日期选择器</string>
     <string name="button45">时间选择器</string>
     <string name="button46">数值选择器NumberPicker</string>
+    <string name="button47">时钟组件</string>
+    <string name="button48">日历和定时器</string>
+    <string name="button49">滚动视图</string>
+    <string name="button50">搜索框</string>
+    <string name="button51">选项卡TabHost</string>
+    <string name="button52">RecyclerView</string>
+    <string name="button53">RecyclerView分割线</string>
+    <string name="button54">RecyclerView点击事件</string>
+    <string name="button55">RecyclerView数据动态更新</string>
+    <string name="button56">完善RecyclerView，添加首尾视图</string>
+    <string name="button57">ViewPager实现引导页</string>
+    <string name="button58">ViewPager完成TabHost效果</string>
+    <string name="button59">CardView卡片式布局</string>
+    <string name="button60">SwipeRefreshLayout下拉刷新</string>
+    <string name="button61">Activity入门</string>
     <string name="title_activity_tabbar">tabbar</string>
     <string name="title_home">标题左</string>
     <string name="title_dashboard">标题中</string>
