练到80课时，最后这些基本都是很重要的理论，需要不停地啃

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,19 @@
     <string name="button62">Activity启动和关闭</string>
     <string name="button63">生命周期</string>
     <string name="button64">Activity数据保存和横竖屏切换</string>
+    <string name="button65">Activity任务栈</string>
+    <string name="button66">四大组件的纽带Intent</string>
+    <string name="button67">Intent 属性详解（上）</string>
+    <string name="button68">Intent 属性详解（下）</string>
+    <string name="button69">Activity数据传递</string>
+    <string name="button70">Activity数据回传</string>
+    <string name="button71">Activity间数据传递方法汇总</string>
+    <string name="button72">引入Fragment</string>
+    <string name="button73">Fragment使用</string>
+    <string name="button74">Fragment生命周期</string>
+    <string name="button75">Fragment添加、删除、替换</string>
+    <string name="button76">Fragment显示和隐藏、绑定和解绑</string>
+    <string name="button77">Fragment回退栈及弹出方法</string>
     <string name="title_activity_tabbar">tabbar</string>
     <string name="title_home">标题左</string>
     <string name="title_dashboard">标题中</string>
