--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">这个是app的名称</string>
+    <string name="app_name">梦想Comic</string>
     <string name="we_sub_name">这里是专门显示教学的页面</string>
     <string name="button1">确认</string>
     <string name="editText1">名字</string>
