--- a/chenyu_demo/src/main/res/values/strings.xml
+++ b/chenyu_demo/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">尘雨_demo</string>
+
+
+    <string-array name="countries">
+        <item>第一阶段</item>
+        <item>第二阶段</item>
+        <item>第三阶段</item>
+        <item>第四阶段</item>
+        <item>第五阶段</item>
+        <item>第六阶段</item>
+        <item>第七阶段</item>
+        <item>第八阶段</item>
+        <item>第九阶段</item>
+        <item>第十阶段</item>
+    </string-array>
 </resources>
